--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 <body>
     <div class="container">
         <h1>ChatVent</h1>
-        <button id="connect-btn">Connect</button>
-
-        <div id="chat-container" class="hidden">
+        <div id="chat-container">
             <div id="messages"></div>
             <form id="chat-form">
                 <input type="text" id="message-input" placeholder="Schreib etwas..." autocomplete="off"/>
