--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <p class="tag">random conversations — lo-fi vibes</p>
 </header>
 
+<div class="status">Status: <span id="status">offline</span> | Active Users: <span id="user-count">0</span></div>
+
 
 <main class="card">
 <section class="controls">
