--- a/index.html
+++ b/index.html
@@ -1,61 +1,72 @@
 <!doctype html>
 <html lang="de">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>ChatVent — Random Chat</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>ChatVent — Random Chat</title>
 
-
-<!-- Google Fonts -->
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
-
-
-<link rel="stylesheet" href="/style.css" />
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css" />
 </head>
 <body>
-<div id="app" class="container">
-<header class="header">
-<h1 class="logo">ChatVent</h1>
-<p class="tag">random conversations — lo-fi vibes</p>
-</header>
+  <div id="app" class="container">
 
+    <!-- HEADER -->
+    <header class="header">
+      <h1 class="logo">ChatVent</h1>
+      <p class="tag">random conversations — dark neon vibes</p>
+    </header>
 
-<main class="card">
-<section class="controls">
-<div class="status">Status: <span id="status">offline</span></div>
-<div class="buttons">
-<button id="btn-connect" class="btn primary">Find a Stranger</button>
-<button id="btn-disconnect" class="btn danger" disabled>Disconnect</button>
-</div>
-</section>
+    <!-- MAIN CARD -->
+    <main class="card">
 
+      <!-- CHAT & CONTROLS -->
+      <section class="chat-section">
 
-<section class="chat-area">
-<div id="messages" class="messages"></div>
+        <!-- CONTROLS -->
+        <div class="controls">
+          <div class="status">
+            Status: <span id="status">offline</span>
+          </div>
+          <div class="buttons">
+            <button id="btn-connect" class="btn primary">Find a Stranger</button>
+            <button id="btn-disconnect" class="btn danger" disabled>Disconnect</button>
+          </div>
+        </div>
 
+        <!-- CHAT AREA -->
+        <div class="chat-area">
+          <div id="messages" class="messages"></div>
 
-<form id="msg-form" class="message-form" autocomplete="off">
-<input id="msg-input" placeholder="Say something..." maxlength="1000" />
-<button class="btn send" type="submit">Send</button>
-</form>
-</section>
+          <form id="msg-form" class="message-form" autocomplete="off">
+            <input id="msg-input" placeholder="Say something..." maxlength="1000" />
+            <button class="btn send" type="submit">Send</button>
+          </form>
+        </div>
 
+      </section>
 
-<aside class="sidebar">
-<h3>Safety & Tips</h3>
-<ul>
-<li>Don't share personal info.</li>
-<li>Use the <strong>Disconnect</strong> button to leave a conversation.</li>
-<li>Report abuse to the moderators.</li>
-</ul>
-</aside>
-</main>
+      <!-- SIDEBAR -->
+      <aside class="sidebar">
+        <h3>Tips & Safety</h3>
+        <ul>
+          <li>Don't share personal info.</li>
+          <li>Use <strong>Disconnect</strong> to leave a conversation.</li>
+          <li>Report abuse to moderators.</li>
+          <li>Enjoy neon vibes! ✨</li>
+        </ul>
+      </aside>
 
+    </main>
 
-<footer class="credit">Made with <span class="heart">♥</span> — TV Girl inspired UI • ChatVent</footer>
-</div>
+    <!-- FOOTER -->
+    <footer class="credit">
+      Made with <span class="heart">♥</span> — TV Girl inspired • ChatVent
+    </footer>
 
+  </div>
 
-<script src="/main.js"></script>
+  <script src="/main.js"></script>
 </body>
 </html>
