--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   <main class="card">
     <section class="controls">
       <div class="status">Status: <span id="status">offline</span></div>
+      <div class="status-container">
+        <div id="status">offline</div>
+        <div id="typing-status" style="font-size:12px; color:#7f5af0;"></div>
+      </div>
+      
       <div class="buttons">
         <select id="country-select" class="country-select">
           <option value="any">Any</option>
