--- a/index.html
+++ b/index.html
@@ -1,58 +1,56 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ChatVent</title>
-<link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ChatVent — Random Chat</title>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-<div id="app" class="container">
-  <header class="header">
-    <h1 class="logo">ChatVent</h1>
-    <p class="tag">Random chat — Dark LoFi vibes</p>
-  </header>
+  <div class="container">
+    <header class="header">
+      <h1 class="logo">ChatVent</h1>
+      <p class="tag">random conversations — lo-fi vibes</p>
+    </header>
 
-  <main class="card">
-    <section class="controls">
-      <div class="status-container">
-        <div class="status" id="status">offline</div>
-        <div id="typing-status" class="typing"></div>
-      </div>
-      <div class="buttons">
-        <select id="country-select">
-          <option value="any">Any Country</option>
-          <option value="de">Germany</option>
-          <option value="us">USA</option>
-        </select>
-        <button id="btn-connect" class="btn primary">Find Stranger</button>
-        <button id="btn-disconnect" class="btn danger" disabled>Disconnect</button>
-      </div>
-    </section>
+    <main class="card">
+      <section class="controls">
+        <div class="status">Status: <span id="status">offline</span></div>
+        <div class="buttons">
+          <select id="country-select" class="dropdown">
+            <option value="any">Any Country</option>
+            <option value="DE">Germany</option>
+            <option value="US">USA</option>
+          </select>
+          <button id="btn-connect" class="btn primary">Find a Stranger</button>
+          <button id="btn-disconnect" class="btn danger" disabled>Disconnect</button>
+        </div>
+      </section>
 
-    <section class="chat-area">
-      <div id="messages" class="messages"></div>
+      <section class="chat-area">
+        <div id="messages" class="messages"></div>
+        <div id="typing" class="typing"></div>
 
-      <form id="msg-form" class="message-form" autocomplete="off">
-        <input id="msg-input" placeholder="Say something..." maxlength="1000" />
-        <button class="btn send" type="submit">Send</button>
-      </form>
-    </section>
+        <form id="msg-form" class="message-form" autocomplete="off">
+          <input id="msg-input" placeholder="Say something..." maxlength="1000" />
+          <button type="submit" class="btn send">Send</button>
+        </form>
+      </section>
 
-    <aside class="sidebar">
-      <h3>Tips</h3>
-      <ul>
-        <li>Don't share personal info.</li>
-        <li>Use <strong>Disconnect</strong> to leave.</li>
-        <li>Report abuse to moderators.</li>
-      </ul>
-    </aside>
-  </main>
+      <aside class="sidebar">
+        <h3>Safety & Tips</h3>
+        <ul>
+          <li>Don't share personal info.</li>
+          <li>Use <strong>Disconnect</strong> to leave a conversation.</li>
+          <li>Report abuse to the moderators.</li>
+        </ul>
+      </aside>
+    </main>
 
-  <footer class="credit">Made with ♥ — ChatVent</footer>
-</div>
+    <footer class="credit">Made with <span class="heart">♥</span> — ChatVent</footer>
+  </div>
 
-<script src="main.js"></script>
+  <script src="/main.js"></script>
 </body>
 </html>
